clusters/prod/extras/jellyseerr/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: seerr-via-cf-tunnel
  namespace: arr-management
  # annotations:
  #   route.openshift.io/termination: edge
  #   kubernetes.io/ingress.class: openshift-default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: seerr.hknlab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  name: http
  # tls:
  #   - secretName: seerr-tls
  #     hosts:
  #       - seerr.hknlab.io
